data/derived/sp14/progs/unify/prog3139.ml.out
Characters 46-59:
  wwhile (let x = not f in (x,(f b) = b),b);;
                           ^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
